--- a/view/frontend/web/template/payment/method-ccard.html
+++ b/view/frontend/web/template/payment/method-ccard.html
@@ -148,15 +148,9 @@
                                data-bind="attr: {id: getCode() + '_cc_cid',
                                 title: $t('Card Verification Code'),
                                 placeholder: getCvcPlaceholder(),
-                                'data-validate': JSON.stringify({'required-number':true, 'validate-card-cvv':'#' + getCode() + '_cc_type'})},
+                                'data-validate': JSON.stringify({'required-number':true})},
                                 value: cardverifycode"/>
                         <div class="field-tooltip toggle">
-                            <span class="field-tooltip-action action-cvv"
-                                  tabindex="0"
-                                  data-toggle="dropdown"
-                                  data-bind="attr: {title: $t('What is this?')}, mageInit: {'dropdown':{'activeClass': '_active'}}">
-                                <span><!-- ko i18n: 'What is this?'--><!-- /ko --></span>
-                            </span>
                             <div class="field-tooltip-content"
                                  data-target="dropdown"
                                  data-bind="html: getCvvImageHtml()"></div>
