--- a/view/frontend/templates/script.phtml
+++ b/view/frontend/templates/script.phtml
@@ -35,3 +35,17 @@
     <script type="text/javascript" src="<?php echo $this->getDataStorageUrl(); ?>"></script>
 <?php endif; ?>
 
+<?php if ($this->getConsumerDeviceId()){ ?>
+    <script>
+        var di = {t:'<?php echo $this->getConsumerDeviceId(); ?>',v:'WDWL',l:'Checkout'};
+    </script>
+    <script type='text/javascript' src='//d.ratepay.com/<?php echo $this->getConsumerDeviceId(); ?>/di.js'></script>
+    <noscript>
+        <link rel='stylesheet' type='text/css' href='//d.ratepay.com/di.css?t=<?php echo $this->getConsumerDeviceId(); ?>&v=WDWL&l=Checkout'>
+    </noscript>
+    <object type='application/x-shockwave-flash' data='//d.ratepay.com/WDWL/c.swf' width='0' height='0'>
+        <param name='movie' value='//d.ratepay.com/WDWL/c.swf' />
+        <param name='flashvars' value='t=<?php echo $this->getConsumerDeviceId(); ?>&v=WDWL'/>
+        <param name='AllowScriptAccess' value='always'/>
+    </object>
+<?php } ?>
