Update JS class names

--- a/view/frontend/templates/storagereturn.phtml
+++ b/view/frontend/templates/storagereturn.phtml
@@ -44,8 +44,8 @@
 
         function setResponse(response)
         {
-            if (typeof parent.QentaCEE\Fallback\Request\Object == 'object') {
-                parent.QentaCEE\Fallback\Request\Object.setResponseText(response);
+            if (typeof parent.WirecardCEE_Fallback_Request_Object == 'object') {
+                parent.WirecardCEE_Fallback_Request_Object.setResponseText(response);
             }
         }
 
